src/wgpu_binding.zig

pub const WGPUComputePipelineDescriptor = extern struct {
    nextInChain: [*c]const WGPUChainedStruct,
    label: [*c]const u8,
    layout: WGPUPipelineLayout,
    compute: WGPUProgrammableStageDescriptor,
};
pub const WGPUDeviceDescriptor = extern struct {
    nextInChain: *const WGPUChainedStruct,
    requiredFeaturesCount: u32,
    requiredFeatures: [*]const WGPUFeatureName,
    requiredLimits: [*c]const WGPURequiredLimits,
};
pub const WGPURenderPassDescriptor = extern struct {
    nextInChain: [*c]const WGPUChainedStruct,
    label: [*c]const u8,
    colorAttachmentCount: u32,
    colorAttachments: [*c]const WGPURenderPassColorAttachment,
    depthStencilAttachment: [*c]const WGPURenderPassDepthStencilAttachment,
    occlusionQuerySet: WGPUQuerySet,
};
pub const WGPUVertexState = extern struct {
    nextInChain: [*c]const WGPUChainedStruct,
    module: WGPUShaderModule,
    entryPoint: [*c]const u8,
    constantCount: u32,
    constants: [*c]const WGPUConstantEntry,
    bufferCount: u32,
    buffers: [*c]const WGPUVertexBufferLayout,
};
pub const WGPUFragmentState = extern struct {
    nextInChain: [*c]const WGPUChainedStruct,
    module: WGPUShaderModule,
    entryPoint: [*c]const u8,
    constantCount: u32,
    constants: [*c]const WGPUConstantEntry,
    targetCount: u32,
    targets: [*c]const WGPUColorTargetState,
};
pub const WGPURenderPipelineDescriptor = extern struct {
    nextInChain: [*c]const WGPUChainedStruct,
    label: [*c]const u8,
    layout: WGPUPipelineLayout,
    vertex: WGPUVertexState,
    primitive: WGPUPrimitiveState,
    depthStencil: [*c]const WGPUDepthStencilState,
    multisample: WGPUMultisampleState,
    fragment: [*c]const WGPUFragmentState,
};
